# ixTalk

./: .gitignore  __main__.py  pyproject.toml  pytest.ini
app/core/: config.py  init_db.py
app/db/: enums.py
app/db/models/: __init__.py  admins.py  logs.py  messages.py  reports.py  users.py  warnings.py
app/utils/: code_generator.py
tests/: conftest.py  test_users.py
