[project]
name = "ixtalk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=45.0.6",
    "kurigram>=2.2.7",
    "pytest-asyncio>=1.2.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.13.0",
    "tgcrypto>=1.2.5",
    "tortoise-orm[aiomysql]>=0.25.1",
]
